--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.2.0",
     "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.7",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
